feat: refactor and optimise the whole entity AI system